syntax = "proto3";

package fr.unice.polytech.soa.team.j.bluegalacticx.telemetry.booster;

option java_multiple_files = true;
option java_package =
    "fr.unice.polytech.soa.team.j.bluegalacticx.telemetry.booster.proto";

message TelemetryBoosterRequest {
  string boosterId = 1;
  string rocketId = 2;
  uint32 fuel = 3;
  string boosterStatus = 4;
  double distanceFromEarth = 5;
  double speed = 6;
}
